# galax

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CODE_OF_CONDUCT.md  CONVENTIONS.md  JaxStreams.py  JaxStreamsDemo.ipynb  JaxStreamsDemo_diffrax.ipynb  LICENSE  Pal5Diffrax.ipynb  README.md  SECURITY.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  conftest.py  custom_integrator.ipynb  noxfile.py  pyproject.toml  stream_integrator_static.ipynb  stream_integrator_static_time_dep.ipynb  stream_integrator_static_time_dep_first_deriv_tests.ipynb  try_train.ipynb
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  contributing.rst  conventions.rst  docs.rst  getting_started.rst  glossary.rst  index.md  index.rst  install.rst  testing.rst  tutorials.rst  user_guide.rst
docs/potential/: compositepotential.rst  define-new-potential.rst  index.rst
docs/whatsnew/: 1.0.rst
licences/: BoundClass.txt  LICENSE.txt
notebooks/: example.ipynb
src/galax/: __init__.py  __init__.pyi  _custom_types.py  setup_package.py  typing.py  units.py
src/galax/_galax_interop_astropy/: __init__.py  coordinates.py  dynamics.py  potential.py
src/galax/_galax_interop_gala/: __init__.py  dynamics.py  potential.py
src/galax/_interop/: __init__.py  optional_deps.py
src/galax/_interop/galax_interop_astropy/: __init__.py  coordinates.py  dynamics.py  potential.py  unxt.py
src/galax/_interop/galax_interop_gala/: __init__.py  coordinates.py  potential.py
src/galax/_interop/galax_interop_galpy/: __init__.py  potential.py
src/galax/_interop/matplotlib/: __init__.py  contours.py  orbit.py  potential.py
src/galax/coordinates/: __init__.py  __init__.pyi  _base.py  _compat.py  _core.py  _psp.py  _pspt.py  _utils.py  _warnings.py  frames.py  operators.py  ops.py
src/galax/coordinates/_psp/: __init__.py  base.py  base_composite.py  base_psp.py  compat_apy.py  core.py  interp.py  operator_compat.py  psp.py  pspt.py  utils.py
src/galax/coordinates/_src/: __init__.py  base.py  interp.py  utils.py
src/galax/coordinates/operators/: __init__.py  _compat.py  _rotating.py  base.py  composite.py  funcs.py  galilean.py  identity.py  rotating.py  sequential.py
src/galax/dynamics/: __init__.py  __init__.pyi  _base.py  _compat.py  _core.py  _orbit.py  cluster.py  examples.py  fields.py  integrate.py  mockstream.py  orbit.py  plot.py  solve.py
src/galax/dynamics/_dynamics/: __init__.py  base.py  core.py  funcs.py  orbit.py  utils.py
src/galax/dynamics/_src/: api.py  compat.py  custom_types.py  fields.py  funcs.py  orbit.py  orbit_plot.py  parsetime.py  register_api.py  solver.py  utils.py
src/galax/dynamics/mockstream/: __init__.py  _core.py  _mockstream_generator.py
src/galax/extensions/matplotlib/: __init__.py  _mpl_mixin.py  _mpl_mixin_noop.py
src/galax/integrate/: __init__.py  _api.py  _base.py  _builtin.py  _timespec.py
src/galax/potential/: __init__.py  __init__.pyi  io.py  params.py  plot.py
src/galax/potential/_potential/: __init__.py  base.py  builtin.py  composite.py  core.py  frame.py  funcs.py  io.py  plot.py  special.py  subhalo.py  triaxial.py  utils.py
src/galax/potential/_src/: __init__.py  api.py  base.py  base_multi.py  base_single.py  base_xfm.py  composite.py  core.py  frame.py  funcs.py  io.py  plot.py  register_funcs.py  utils.py
src/galax/utils/: __init__.py  _boundinstance.py  _collections.py  _jax.py  _misc.py  _optional_deps.py  _shape.py  _types.py  _unxt.py  dataclasses.py  defaults.py  loop_strategies.py  plot.py
src/galax_suite/galax/: setup_package.py  typing.py
src/galax_suite/galax/coordinates/: __init__.py  __init__.pyi
src/galax_suite/galax/dynamics/: __init__.py  integrate.py
src/galax_suite/galax/potential/: params.py
src/galax_suite/galax/utils/: _jax.py  _optional_deps.py  _shape.py  dataclasses.py
src/galax_suite/galax_interop_astropy/: __init__.py
src/galax_suite/galax_interop_gala/: coordinates.py
src/galdynamix/: JaxStreams.py  JaxStreams_diffrax.py  JaxStreams_diffrax_refactored.py  __init__.py  typing.py  units.py  utils.py
src/galdynamix/dynamics/: __init__.py  _core.py  _orbit.py
src/galdynamix/dynamics/mockstream/: __init__.py  _core.py  _df.py  _mockstream.py  _mockstream_generator.py
src/galdynamix/integrate/: __init__.py  _base.py  _builtin.py
src/galdynamix/potential/: __init__.py  _base.py  _composite.py  _hamiltonian.py
src/galdynamix/utils/: __init__.py  _collections.py  _jax.py  _misc.py  _shape.py  dataclasses.py
tests/: test_package.py
tests/benchmark/: __init__.py  test_experimental.py  test_integration.py
tests/functional/: test_mockstreamgenerator.py
tests/functional/reference/: test_first_deriv.txt  test_second_deriv.txt
tests/integration/matplotlib/: .gitignore  __init__.py  hashes.json  test_dynamicssolver.py  test_orbit.py  test_potential.py
tests/mpl_figure/: hashes.json
tests/potential/: test_base.py  test_builtin.py  test_core.py  test_package.py  test_utils.py
tests/potential/builtin/: test_bar.py  test_builtin.py  test_common.py  test_isochrone.py  test_miyamotonagai.py  test_nfw.py
tests/potential/params/: test_core.py  test_field.py
tests/potential/scf/: test_coeff_helper.py  test_coeffs.py  test_gegenbauer.py  test_utils.py
tests/smoke/: test_package.py
tests/smoke/coordinates/: test_package.py
tests/smoke/dynamics/: test_package.py
tests/smoke/integrate/: test_package.py
tests/smoke/potential/: test_package.py
tests/smoke/utils/: test_package.py
tests/unit/: test_units.py
tests/unit/coordinates/: test_base.py  test_psp.py  test_pspt.py  test_utils.py
tests/unit/dynamics/: test_core.py  test_orbit.py
tests/unit/integrate/: test_timespec.py
tests/unit/potential/: test_base.py  test_composite.py  test_core.py  test_frame.py  test_special.py  test_utils.py
tests/unit/utils/: test_collections.py  test_dataclasses.py  test_jax.py  test_misc.py  test_shape.py
tests/utils/: test_collections.py  test_dataclasses.py  test_jax.py  test_misc.py  test_package.py  test_shape.py
(+403 files in other folders)
